# huninn

./: Cargo.toml  README.md
munin-cli/: Cargo.toml
munin-cli/src/: args.rs  config.rs  main.rs
munin-d/: Cargo.toml
munin-d/src/: main.rs
munin-daemon/: Cargo.toml  build.rs
munin-daemon/src/: args.rs  main.rs  win_service.rs
munin-daemon/src/shared/: config.rs  mod.rs
munin-proto/: Cargo.toml
munin-proto/src/: lib.rs
munin-server/: Cargo.toml  build.rs
munin-server/src/: config.rs  lib.rs  os.rs
munin-svc/: Cargo.toml
munin-svc/src/: args.rs  main.rs
muninn-cli/: Cargo.toml
muninn-cli/src/: args.rs  config.rs  main.rs
muninn-daemon/: Cargo.toml
muninn-daemon/src/: args.rs  config.rs  main.rs  os.rs  win_service.rs
muninn-daemon/src/shared/: mod.rs  os.rs
muninn-daemon/tests/: audio.rs
muninn-proto/: Cargo.toml
muninn-proto/src/: lib.rs
