[package]
name = "munin-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "munin"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
iroh-net = "0.26.0"
postcard = "1.0.10"
quic-rpc = "0.12.1"
serde = "1.0.210"
tokio = { version = "1.40.0", features = ["full"] }
munin-proto = { path = "../munin-proto" }
tracing = "0.1.40"
dirs-next = "2.0.0"
toml = "0.8.19"
tracing-subscriber = "0.3.18"
