[package]
name = "munin-d"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = "0.3.18"
munin-server = { path = "../munin-server" }

[build-dependencies]
iroh-base = { version = "0.26", features = ["key"] }
