[package]
name = "munin-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
iroh-net = "0.26.0"
postcard = "1.0.10"
serde = "1.0.210"
sysinfo = "0.32.0"
tokio = { version = "1.40.0", features = ["full"] }
munin-proto = { path = "../munin-proto" }
tracing = "0.1.40"
dirs-next = "2.0.0"
tracing-subscriber = "0.3.18"
toml = "0.8.19"
libc = "0.2.160"
nix = "0.29.0"
hostname = "0.4.0"
rodio = "0.19.0"
cpal = "0.15.3"
bytes = "1.7.2"
windows-service = "0.7.0"
winapi = { version = "0.3.9", features = ["winuser"] }
windows-sys = { version = "0.59.0", features = ["Win32"] }
futures = "0.3.31"

[build-dependencies]
iroh-base = { version = "0.26", features = ["key"] }
