[package]
name = "munin-svc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
postcard = "1.0.10"
serde = "1.0.210"
tokio = { version = "1.40.0", features = ["full"] }
windows-service = "0.7.0"
winapi = { version = "0.3.9", features = ["winuser"] }
windows-sys = { version = "0.59.0", features = ["Win32"] }
tempfile = "3.13.0"
munin-server = { path = "../munin-server" }

[build-dependencies]
iroh-base = { version = "0.26", features = ["key"] }
