[package]
name = "muninn-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
iroh-net = "0.26.0"
postcard = "1.0.10"
serde = "1.0.210"
sysinfo = "0.32.0"
tokio = { version = "1.40.0", features = ["full"] }
muninn-proto = { path = "../muninn-proto" }
tracing = "0.1.40"
dirs-next = "2.0.0"
tracing-subscriber = "0.3.18"
toml = "0.8.19"
windows-service = "0.7.0"
libc = "0.2.160"
nix = "0.29.0"
hostname = "0.4.0"
rodio = "0.19.0"
cpal = "0.15.3"
bytes = "1.7.2"
winapi = { version = "0.3.9", features = ["winuser"] }
